--- a/shared/locale/en.json
+++ b/shared/locale/en.json
@@ -79,7 +79,7 @@
     "BONETWIST_SUBTITLE": "Bone Twist",
     "BONEHEIGHT_SUBTITLE": "Bone Height",
     "BONEWIDTH_SUBTITLE": "Bone Width",
-    "BONELENGHT_SUBTITLE": "Bone Length",
+    "BONELENGTH_SUBTITLE": "Bone Length",
     "BONELOWERING_SUBTITLE": "Bone Lowering",
     "BLEMISHES_SUBTITLE": "Blemishes",
     "AGEING_SUBTITLE": "Ageing",
