Improves appearance customization system
Refactors the appearance customization system to improve outfit management and enhance UI.

Key changes:
- Introduces outfit sharing via unique codes.
- Allows outfit renaming.
- Implements framework-agnostic money transactions for appearance changes.
- Introduces zones for managing appearance locations.
- Improves admin menu to handle all features.

--- a/shared/locale/en.json
+++ b/shared/locale/en.json
@@ -107,5 +107,115 @@
     "ZONE_SINGLEPOINT_INSTRUCTIONS": "[WASD/Q/Z] Move \n [E] Confirm \n [Backspace] Cancel",
     "ZONE_POINT_ADDED": "Point %d added",
     "ZONE_POINT_REMOVED": "Last point removed. %d points remaining",
-    "ZONE_NO_POINTS": "No points to remove"
+    "ZONE_NO_POINTS": "No points to remove",
+
+    "ADMIN_MENU_TITLE": "Appearance Admin Menu",
+    "ADMIN_TAB_THEME": "Appearance Settings",
+    "ADMIN_TAB_RESTRICTIONS": "Restrictions",
+    "ADMIN_TAB_MODELS": "Models",
+    "ADMIN_TAB_SHOPS": "Shop Options",
+    "ADMIN_TAB_TATTOOS": "Tattoos",
+    "ADMIN_TAB_ZONES": "Zones",
+    "ADMIN_TAB_OUTFITS": "Outfits",
+    
+    "ADMIN_ADD": "Add",
+    "ADMIN_DELETE": "Delete",
+    "ADMIN_IMPORT": "Import",
+    "ADMIN_EXPORT": "Export",
+    "ADMIN_ADD_RESTRICTION": "Add Restriction",
+    "ADMIN_ADD_ZONE": "Add Zone",
+    "ADMIN_ADD_OUTFIT": "Add Outfit",
+    "ADMIN_ADD_DLC": "Add DLC",
+    "ADMIN_ADD_TATTOO": "Add Tattoo",
+    "ADMIN_ADD_MODEL": "Add Model",
+    "ADMIN_SAVE_TATTOOS": "Save Tattoos",
+    "ADMIN_IMPORT_TATTOOS": "Import Tattoos",
+    
+    "ADMIN_LABEL_JOB": "Job",
+    "ADMIN_LABEL_GANG": "Gang",
+    "ADMIN_LABEL_GENDER": "Gender",
+    "ADMIN_LABEL_PART": "Part",
+    "ADMIN_LABEL_MODEL": "Model",
+    "ADMIN_LABEL_CATEGORY": "Category",
+    "ADMIN_LABEL_ITEM_ID": "Item ID",
+    "ADMIN_LABEL_ALL_TEXTURES": "All textures",
+    "ADMIN_LABEL_TEXTURES": "Textures (comma-separated)",
+    "ADMIN_LABEL_IDENTIFIER": "Identifier (optional - leave empty for all players)",
+    "ADMIN_LABEL_OUTFIT_NAME": "Outfit Name",
+    "ADMIN_LABEL_ZONE_TYPE": "Zone Type",
+    "ADMIN_LABEL_SHOW_BLIP": "Show Blip",
+    "ADMIN_LABEL_BLIP_NAME": "Blip Name",
+    "ADMIN_LABEL_BLIP_SPRITE": "Blip Sprite",
+    "ADMIN_LABEL_BLIP_COLOR": "Blip Color",
+    "ADMIN_LABEL_BLIP_SCALE": "Blip Scale",
+    "ADMIN_LABEL_COST": "Cost",
+    "ADMIN_LABEL_MODEL_NAME": "Model Name",
+    "ADMIN_LABEL_ENABLE_PEDS_SHOPS": "Enable Peds for Shops",
+    "ADMIN_LABEL_ENABLE_PEDS_CLOTHING": "Enable Peds for Clothing Rooms",
+    "ADMIN_LABEL_ENABLE_PEDS_OUTFITS": "Enable Peds for Player Outfit Rooms",
+    
+    "ADMIN_PLACEHOLDER_JOB": "police",
+    "ADMIN_PLACEHOLDER_GANG": "ballas",
+    "ADMIN_PLACEHOLDER_IDENTIFIER": "license:abc123 or steam:110000123456789",
+    "ADMIN_PLACEHOLDER_OUTFIT_NAME": "Police Uniform",
+    "ADMIN_PLACEHOLDER_MODEL_SEARCH": "Search for a model...",
+    "ADMIN_PLACEHOLDER_CATEGORY": "Select category",
+    "ADMIN_PLACEHOLDER_TEXTURES": "0,1,2,3",
+    "ADMIN_PLACEHOLDER_ITEM_ID": "123",
+    "ADMIN_PLACEHOLDER_ZONE_TYPE": "Select zone type",
+    "ADMIN_PLACEHOLDER_MODEL_NAME": "mp_m_freemode_01 or a_m_y_business_01",
+    "ADMIN_PLACEHOLDER_TATTOO_LABEL": "Label",
+    "ADMIN_PLACEHOLDER_TATTOO_ZONE": "Zone",
+    "ADMIN_PLACEHOLDER_TATTOO_PRICE": "$",
+    "ADMIN_PLACEHOLDER_TATTOO_HASH_M": "M hash",
+    "ADMIN_PLACEHOLDER_TATTOO_HASH_F": "F hash",
+    "ADMIN_PLACEHOLDER_DLC_NAME": "e.g., mpbeach_overlays",
+    "ADMIN_PLACEHOLDER_TATTOO_SEARCH": "Search label or hash across all DLCs",
+    
+    "ADMIN_GENDER_MALE": "Male",
+    "ADMIN_GENDER_FEMALE": "Female",
+    
+    "ADMIN_PART_MODEL": "Model",
+    "ADMIN_PART_DRAWABLE": "Drawable",
+    "ADMIN_PART_PROP": "Prop",
+    
+    "ADMIN_CATEGORY_MASKS": "Masks",
+    "ADMIN_CATEGORY_UNDERSHIRTS": "Undershirts",
+    "ADMIN_CATEGORY_TOPS": "Tops/Jackets",
+    "ADMIN_CATEGORY_VEST": "Vest",
+    "ADMIN_CATEGORY_LEGS": "Legs",
+    "ADMIN_CATEGORY_SHOES": "Shoes",
+    "ADMIN_CATEGORY_HATS": "Hats",
+    "ADMIN_CATEGORY_GLASSES": "Glasses",
+    
+    "ADMIN_ZONE_TYPE_CLOTHING": "Clothing",
+    "ADMIN_ZONE_TYPE_BARBER": "Barber",
+    "ADMIN_ZONE_TYPE_TATTOO": "Tattoo",
+    "ADMIN_ZONE_TYPE_SURGEON": "Surgeon",
+    
+    "ADMIN_TATTOO_ZONE_TORSO": "Torso",
+    "ADMIN_TATTOO_ZONE_HEAD": "Head",
+    "ADMIN_TATTOO_ZONE_LEFT_ARM": "Left Arm",
+    "ADMIN_TATTOO_ZONE_RIGHT_ARM": "Right Arm",
+    "ADMIN_TATTOO_ZONE_LEFT_LEG": "Left Leg",
+    "ADMIN_TATTOO_ZONE_RIGHT_LEG": "Right Leg",
+    "ADMIN_TATTOO_ZONE_UNKNOWN": "Unknown",
+    "ADMIN_TATTOO_ZONE_NONE": "None",
+    
+    "ADMIN_MSG_LOADING": "Loading admin menu...",
+    "ADMIN_MSG_LOADING_THEME": "Loading theme settings...",
+    "ADMIN_MSG_LOADING_RESTRICTIONS": "Loading restrictions...",
+    "ADMIN_MSG_LOADING_MODELS": "Loading models...",
+    "ADMIN_MSG_LOADING_TATTOOS": "Loading tattoos...",
+    "ADMIN_MSG_NO_ZONES": "No zones configured",
+    "ADMIN_MSG_UNNAMED_ZONE": "Unnamed Zone",
+    "ADMIN_MSG_COORDS": "Coords",
+    "ADMIN_MSG_POLYZONE_POINTS": "polyzone points",
+    "ADMIN_MSG_SELECT_ALL": "Select All (Lock from Everyone)",
+    "ADMIN_MSG_TATTOO_ENTRIES": "Tattoo Entries (label + hashes)",
+    "ADMIN_MSG_IMPORT_FAILED": "Failed to import tattoos. Check console for details.",
+    
+    "ADMIN_BADGE_JOB": "Job",
+    "ADMIN_BADGE_GANG": "Gang",
+    "ADMIN_BADGE_BLIP_HIDDEN": "Blip Hidden"
 }
